# starlight

./: .gitignore  .gitmodules  .releaserc  CMakeLists.txt  CMakeUserPresets.json  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vcpkg-configuration.json  vcpkg.json  version  vite.config.ts
.github/: LICENSE
.github/workflows/: build-installer.yml  ci.yml
core/: Cargo.toml  tauri.conf.json
core/src/: main.rs
core/src/util/: steam.rs
docs/: CHANGELOG.md
electron/: dxsetup.ts  installer.ts  msvc_setup.ts  uninstaller.ts
electron/modules/: auto-installer.ts  ipc-handler.ts
electron/modules/github/: api.ts
electron/modules/steam/: steam-helpers.ts
include/: animate.h  components.h  dpi.h  http.h  imspinner.h  memory.h  renderer.h  router.h  task_scheduler.h  texture.h  theme.h  unzip.h  util.h  wndproc.h
scripts/: version.ps1  version.rc
src/: animate.cc  dpi.cc  main.cc  main.tsx  renderer.cc  router.cc  texture.cc  wndproc.cc
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/ffi/: installer.rs
src-tauri/src/util/: fs.rs  steam.rs
src/components/: Bytes.ts  CheckBox.tsx  Footer.tsx  ForeignFunctions.ts  TimeStamp.tsx  TitleBar.tsx  bottombar.cc  checkbox.cc  message.cc  titlebar.cc
src/installer/: task_scheduler.cc  unzip.cc
src/logic/: GitHub.ts  Installer.ts  Uninstaller.ts
src/routes/: AutoUpdater.tsx  Controller.tsx  InstallPanel.tsx  Installer.tsx  SelectUninstallComponents.tsx  UninstallPanel.tsx  Uninstaller.tsx  auto-updater.tsx  home.cc  install.tsx  install_prompt.cc  installer.cc  installer.tsx  uninstall.tsx  uninstall_select.cc  uninstaller.tsx  user-select.tsx
src/styles/: styles.css
src/util/: ForeignFunctions.ts
