[package]
name = "millennium"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "process-all", "path-all", "http-all", "fs-all", "dialog-all", "window-start-dragging", "window-show", "window-minimize", "window-hide", "window-close", "window-unmaximize", "window-maximize", "window-unminimize", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.4.0"
window-shadows = "0.2.2"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
sysinfo = "0.30.12"
winreg = "0.52.0"
anyhow = "1.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
